Template updates and a smaller banner image

--- a/hackitfresno/templates/pages/prizes.html
+++ b/hackitfresno/templates/pages/prizes.html
@@ -1,5 +1,7 @@
 {% extends "base.html" %}
 
+{% block title %}Prizes | {{ block.super }}{% endblock %}
+
 {% block content %}
 <h1>Prizes</h1>
 {% endblock %}
