--- a/hackitfresno/templates/pages/index.html
+++ b/hackitfresno/templates/pages/index.html
@@ -1,5 +1,7 @@
 {% extends "base.html" %}
 
+{% block title %}24 hour coding hackathon | {{ block.super }}{% endblock %}
+
 {% block content %}
 <h1 class="text-center">
     <span>april</span>
