--- a/hackitfresno/static/css/style.css
+++ b/hackitfresno/static/css/style.css
@@ -1,10 +1,11 @@
 body {
     background-color: #f5edd3;
     color: #03324c;
+    font-family: "Sanchez", serif;
 }
 
 h1 {
-    font-weight: bold;
+    font-size: 40px;
 }
 
 hr {
@@ -17,6 +18,10 @@ hr {
 
 .light {
     color: #9fc6cd;
+}
+
+.bold {
+    font-weight: bold;
 }
 
 .fa-heart {
