--- a/hackitfresno/templates/pages/index.html
+++ b/hackitfresno/templates/pages/index.html
@@ -3,27 +3,23 @@
 {% block title %}24 hour coding hackathon | {{ block.super }}{% endblock %}
 
 {% block content %}
-<h1 class="text-center">
-    <span>april</span>
-    <span class="light">3rd&ndash;4th</span>
-    <span>24hrs</span>
-</h1>
+<h1 class="text-center"><b>april <span class="light">3<sup>rd</sup>/4<sup>th</sup></span></b> 24hrs</h1>
 
 <div class="row">
-    <div class="col-md-4 col-md-offset-2">
+    <div class="col-sm-4 col-sm-offset-2 text-center">
         <a href="https://goo.gl/maps/UqrJa">
             <img src="https://maps.googleapis.com/maps/api/staticmap?center=2210+San+Joaquin+St.,+Fresno,+CA&size=420x240&sensor=false&zoom=13&markers=|color:red|2210+San+Joaquin+St.,+Fresno,+CA" alt="Map to Bitwise Mural District" class="img-thumbnail" />
         </a>
     </div>
     <div class="col-md-4">
+        <p class="lead">
+            <address>
+                <h4 class="bold">Bitwise Mural District</h4>
+                2210 San Joaquin St.<br />
+                Fresno, CA 93721<br />
+            </address>
+        </p>
         <ul class="list-unstyled">
-            <li>
-                <address>
-                    <strong>Bitwise Mural District</strong><br>
-                    2210 San Joaquin St.<br />
-                    Fresno, CA 93721<br />
-                </address>
-            </li>
             <li>
                 <span class="fa fa-fw fa-phone"></span>
                 <a href="tel:+1-559-999-6053">559-999-6053</a>
@@ -32,6 +28,7 @@
                 <span class="fa fa-fw fa-envelope"></span>
                 <a href="mailto:info@hackitfresno.com">info@hackitfresno.com</a>
             </li>
+        </ul>
     </div>
 </div>
 
