Update Eventbrite URL.

--- a/hackitfresno/templates/base.html
+++ b/hackitfresno/templates/base.html
@@ -48,7 +48,7 @@
                         <li><a href="{% url "prizes" %}">Prizes</a></li>
                         {% endcomment %}
                         <li><a href="{% url "coc" %}">Code of Conduct</a></li>
-                        <li><a href="https://www.eventbrite.com/e/hackit-fresno-tickets-16003857970" class="register">Register @ Eventbrite</a></li>
+                        <li><a href="https://hackitfresno.eventbrite.com/" class="register">Register @ Eventbrite</a></li>
                     </ul>
                 </div>
                 <ul class="nav navbar-nav navbar-right hidden-xs">
