--- a/hackitfresno/templates/pages/index.html
+++ b/hackitfresno/templates/pages/index.html
@@ -3,7 +3,7 @@
 {% block title %}24 hour coding hackathon | {{ block.super }}{% endblock %}
 
 {% block content %}
-<h1 class="text-center"><b>april <span class="light">3<sup>rd</sup>/4<sup>th</sup></span></b> 24hrs</h1>
+<h1 class="text-center"><b>may <span class="light">1<sup>st</sup>/2<sup>nd</sup></span></b> 24hrs</h1>
 
 <div class="row">
     <div class="col-sm-4 col-sm-offset-2 text-center">
