--- a/hackitfresno/templates/pages/rules.html
+++ b/hackitfresno/templates/pages/rules.html
@@ -3,12 +3,68 @@
 {% block title %}Rules | {{ block.super }}{% endblock %}
 
 {% block content %}
-<h1>Rules</h1>
 
-<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Vivamus pharetra justo massa, sed egestas velit malesuada at. Vestibulum hendrerit turpis vel ipsum suscipit luctus. Fusce ut magna quis metus lacinia malesuada. Nullam pellentesque ligula eget justo commodo, vel sagittis risus accumsan. Proin luctus in lorem in condimentum. Vivamus vulputate neque in neque porta, sed porttitor felis imperdiet. In tincidunt euismod ornare. Ut sit amet egestas nisi, quis sagittis eros. Nulla viverra elit id leo interdum, sed tempus tellus egestas. Praesent dolor enim, vulputate sit amet viverra ut, maximus eget elit.</p>
+<h1>Official Contest Rules &ndash; 2015 HackIt Fresno</h1>
 
-<p>Vestibulum finibus elit ut tellus facilisis, et feugiat est ultricies. Quisque tempus nibh eu arcu dignissim sagittis. Etiam non molestie diam, ac hendrerit mauris. Sed id elementum magna. Fusce mi nisl, scelerisque lobortis fringilla vitae, faucibus porta nulla. Maecenas vel malesuada justo. Mauris mattis mauris at tortor convallis aliquet. Quisque nec commodo lacus. Suspendisse nec ligula justo. Maecenas vel placerat elit. Vestibulum tincidunt massa diam, eget auctor lorem hendrerit sed. Duis vel ipsum molestie dolor aliquet gravida. Praesent lobortis dui a tellus molestie, at mattis urna vestibulum. In dapibus semper faucibus. Fusce accumsan ultricies lacus.</p>
+<h2>Code of Conduct</h2>
 
-<p>Aliquam ac justo vestibulum, placerat massa quis, placerat neque. Pellentesque ante ex, eleifend id tellus tincidunt, eleifend tristique velit. Proin tempus, ligula sed pellentesque ornare, erat ligula iaculis felis, eu sodales leo nibh sit amet turpis. Etiam suscipit erat vel tempus mattis. Praesent ac nisi libero. Quisque ornare magna dolor, vel pulvinar diam sagittis id. In aliquam a ligula vitae convallis.</p>
+<p>By registering, contestants automatically agree to abide by the <a href="{% url "coc" %}">Code of Conduct</a>.</p>
+
+<h2>Contest Rules</h2>
+
+<p>What follows is a quick summary of the rules. Before HackIt Fresno begins, you'll be asked to accept the full, official rules, which you can read below. If you have any questions, please feel free to email the organizers.</p>
+
+<h3>0. Project must involve writing code</h3>
+
+<p>Projects are not limited to web, mobile, or desktop applications. Any stack or framework is allowed. Projects may, and are highly encouraged to, include a hardware component, but code must be an integral part of every project.</p>
+
+<h3>1. 24 Hours</h3>
+
+<p>As a contestant, your team has exactly 24 hours to develop your project during the HackIt Event. The competition kicks off at 7:00PM PST on May 1st, 2015 and will end at 7:00PM PST on May 2nd, 2015.</p>
+
+<p>You can, of course, work on the concept for your application before the competition starts, including paper and / or digital mockups of the user interface and database entity diagrams. However, no production assets of any kind can be created until the start of the official competition period illustrated above. This includes "ready to slice" graphic design assets, application code, and code based user stores / test cases. Plan, don't create. And if you're in doubt, send us an email to verify.</p>
+
+<p>After the initial 24 hours are up, you'll be judged on what you've completed. No additional features or bugfixes are allowed after the 24 hours are up, or you'll be disqualified.</p>
+
+<h3>2. Teams of One to Four Humans</h3>
+
+<p>Teams must be comprised of between one and four individuals. No more than four humans are allowed on a team. To be eligible, teams must register during the defined registration period (space subject to availability). If you would like to participate, but need to be connected to team members, please contact Jed. Same goes for teams looking for specific skillsets or just additional members.</p>
+
+<h3>3. Leverage Others</h3>
+
+<p>Stock photography, icon sets, and publicly available templates are allowed. Teams are prohibited from commissioning or otherwise paying for any content that is created specifically for the application as opposed to being publicly available for everyone's use. Developing a plugin or library before the competition that provides your application's general functionality is considered cheating. Developing a plugin or library that is publicly available and provides a general purpose publicly usable function (such as accessing an API) can be done before the competition begins. Purchases will not improve your chances of winning. This is a skill-based contest.</p>
+
+<p>Your application can make use of any non-paid and publicly available third party web services. This means that services provided by established services such as Google, Yahoo, Flickr, Twitter, etc are all possible and allowable. If you'd like to use some other third party service, that service must provide  a free tier or free trial that anyone can use. For example, Pusher has a free tier. For transactional email, try Mandrill by MailChimp. As before, make sure to update your presentations to list dependencies on third party services and give credit to those services accordingly.</p>
+
+<p>If you have a question about a particular piece of third party software, please contact competition organizers for clarification.</p>
+
+<h3>4. Ownership &amp; Open Source</h3>
+
+<p>Hey, we're just running a competition here. What you do with your source once the competition is over is up to you. Open sourcing your code will neither hurt nor improve your chances. It's up to you. Please note that competition organizers will have access to your codebase throughout the competition, in order to make sure that no cheating occurs, but we won't steal anything, we promise! We do reserve the right to use your application's likeness as a promotion for this or future contests, though.</p>
+
+<h3>5. User Privacy</h3>
+
+<p>Because your application will be awesome, lots of people will be reviewing it and playing around with it during the competition and review period. In the interest of protecting their information, we're imposing a non-optional privacy policy for the duration of the event. You are not to reveal any user information to any third party, except when required by law. You are not to use account emails for any purpose other than the standard operation of your application. If you choose to continue developing your application after HackIt Fresno has ended, you are required to notify users of any changes in your privacy policy, so they can remove the information if they so choose. For the duration of this competition you hereby agree to abide by the Privacy Policy of the HackIt Fresno competition.</p>
+
+<h3>6. You Will Be Judged</h3>
+
+<p>A set of judges will pick their favorite applications and rank them. At the end of the competition, these rankings will be combined to find the top 3 overall winners, ranked 1 through 3. Additionally, a special "Hackers Choice" award will be given based on rankings collected from each team, who may not vote for their own project in the Hackers Choice Category. Judges may pick from all, non-disqualified entries.</p>
+
+<h3>7. You Don't Need To Sling Code To Get Involved</h3>
+
+<p>You don't need to hack Ruby or Rails to participate. We encourage front end designers to get involved too! Find a team and help out with HTML, CSS, JavaScript, and graphics work. Additionally, we anticipate that only a small fraction of the people involved in this event will be on teams contributing applications. You can be a huge part of the process just by volunteering for such activities as providing water bottles, snacks, caffeine, and possibly high-fives when prompted to competitors and event staff. Contact Jed for more info.</p>
+
+<h3>8. Eligibility</h3>
+
+<p>Humans. Pulse required, HackIt Fresno Chief Technical Advisor Derek Payton will verify by direct contect where necessary.</p>
+
+<h3>9. How to Enter</h3>
+
+<p>To be a Contestant: There is one way to enter. Go to hackitfresno.com, follow the links to register at the Eventbrite page, and complete the online entry form as prompted to register for the contest as an entrant and to create a team profile. A $20.00 team entry fee is required to prove that you are human and contribute to the Hackers Choice Award selected by competitors. Complete the entry form as requested.</p>
+
+<hr />
+
+<p class="small italic">HackIt Fresno is a DBA title of 59DaysofCode 501(c)3 Non-Profit</p>
+
 
 {% endblock %}
