Credit where credit is due

--- a/hackitfresno/templates/pages/coc.html
+++ b/hackitfresno/templates/pages/coc.html
@@ -49,7 +49,9 @@
     </li>
 </ul>
 
-<p class="small text-muted">[Shamelessly adapted from the
-    <a href="http://fresnohacknight.com/">Fresno Hack Night</a> Code of Conduct]<p>
+<hr />
+
+<p class="small italic text-muted">Shamelessly adapted from the
+    <a href="http://fresnohacknight.com/">Fresno Hack Night</a> Code of Conduct<p>
 
 {% endblock %}
