--- a/hackitfresno/templates/pages/rules.html
+++ b/hackitfresno/templates/pages/rules.html
@@ -64,7 +64,9 @@
 
 <hr />
 
-<p class="small italic">HackIt Fresno is a DBA title of 59DaysofCode 501(c)3 Non-Profit</p>
+<p class="small italic text-muted">Shamelessly adapted from the
+    <a href="http://blog.railsrumble.com/rules/">Rails Rumble</a> rules</p>
 
+<p class="small italic text-muted">HackIt Fresno is a DBA title of 59DaysofCode 501(c)3 Non-Profit</p>
 
 {% endblock %}
