Add facebook link to navbar.

--- a/hackitfresno/static/css/style.css
+++ b/hackitfresno/static/css/style.css
@@ -36,6 +36,10 @@ hr {
     color: #4099ff;
 }
 
+.fa-facebook-square {
+    color: #3b5998;
+}
+
 header .register {
     color: #03324c !important;
     font-weight: bold;
