--- a/hackitfresno/templates/base.html
+++ b/hackitfresno/templates/base.html
@@ -33,9 +33,17 @@
                     </button>
                     <ul class="nav navbar-nav pull-right visible-xs" style="margin-right: 0;">
                         <li>
+                            <a href="https://facebook.com/hackitfresno">
+                                <span class="fa fa-facebook-square fa-lg"></span>
+                                <span class="hidden-xs">/hackitfresno</span>
+                            </a>
+                        </li>
+                    </ul>
+                    <ul class="nav navbar-nav pull-right visible-xs" style="margin-right: 0;">
+                        <li>
                             <a href="https://twitter.com/HackItFresno">
                                 <span class="fa fa-twitter fa-lg"></span>
-                                @HackItFresno
+                                <span class="hidden-xs">@HackItFresno</span>
                             </a>
                         </li>
                     </ul>
@@ -53,7 +61,13 @@
                     <li>
                         <a href="https://twitter.com/HackItFresno">
                             <span class="fa fa-twitter fa-lg"></span>
-                            @HackItFresno
+                            <span class="visible-md-inline visible-lg-inline">@HackItFresno</span>
+                        </a>
+                    </li>
+                    <li>
+                        <a href="https://facebook.com/hackitfresno">
+                            <span class="fa fa-facebook-square fa-lg"></span>
+                            <span class="visible-md-inline visible-lg-inline">/hackitfresno</span>
                         </a>
                     </li>
                 </ul>
