Minor tweaks to rules.

--- a/hackitfresno/templates/pages/rules.html
+++ b/hackitfresno/templates/pages/rules.html
@@ -52,11 +52,11 @@
 
 <h3>7. You Don't Need To Sling Code To Get Involved</h3>
 
-<p>You don't need to hack Ruby or Rails to participate. We encourage front end designers to get involved too! Find a team and help out with HTML, CSS, JavaScript, and graphics work. Additionally, we anticipate that only a small fraction of the people involved in this event will be on teams contributing applications. You can be a huge part of the process just by volunteering for such activities as providing water bottles, snacks, caffeine, and possibly high-fives when prompted to competitors and event staff. Contact Jed for more info.</p>
+<p>You don't need to hack Python or C to participate. We encourage front end designers to get involved too! Find a team and help out with HTML, CSS, JavaScript, and graphics work. Additionally, we anticipate that only a small fraction of the people involved in this event will be on teams contributing applications. You can be a huge part of the process just by volunteering for such activities as providing water bottles, snacks, caffeine, and possibly high-fives when prompted to competitors and event staff. Contact Jed for more info.</p>
 
 <h3>8. Eligibility</h3>
 
-<p>Humans. Pulse required, HackIt Fresno Chief Technical Advisor Derek Payton will verify by direct contect where necessary.</p>
+<p>Humans. Pulse required. HackIt Fresno Chief Technical Advisor Derek Payton will verify by direct contact where necessary.</p>
 
 <h3>9. How to Enter</h3>
 
@@ -64,9 +64,13 @@
 
 <hr />
 
-<p class="small italic text-muted">Shamelessly adapted from the
-    <a href="http://blog.railsrumble.com/rules/">Rails Rumble</a> rules</p>
+<div class="small italic text-muted">
+    <p>Shamelessly adapted from the
+        <a href="http://blog.railsrumble.com/rules/">Rails Rumble</a> rules</p>
 
-<p class="small italic text-muted">HackIt Fresno is a DBA title of 59DaysofCode 501(c)3 Non-Profit</p>
+    <p>Rules are subject to change. Final rules will be distributed on the day of the event.</p>
+
+    <p>HackIt Fresno is a DBA title of 59DaysofCode 501(c)3 Non-Profit</p>
+</div>
 
 {% endblock %}
